# Game-Engine-Programming

./: .gitignore  README.md
gepEngine/: CMakeLists.txt  Doxyfile.bak  Doxyfile.template
gepEngine/data/shaders/: basic.frag
gepEngine/resources/shaders/: basic.frag  basic.vert
gepEngine/src/game/: main.cpp
gepEngine/src/gepEngine/: AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Cache.h  Camera.cpp  Camera.h  Input.cpp  Input.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Models.cpp  Models.h  Resource.cpp  Resource.h  Resources.h  Rigidbody.cpp  Rigidbody.h  Scripts.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Textures.cpp  Textures.h  Time.cpp  Time.h  component.cpp  component.h  core.cpp  core.h  entity.cpp  entity.h  gepEngine.h  (+5 more)
gepEngine/src/rend/: Animation.cpp  Animation.h  Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  rend.h  rendmath.cpp  rendmath.h
gepEngine/src/rend/sys/: Atomic.h  Exception.h  File.h  List.h  Lock.h  Mutex.h  Pipe.h  Private.h  Ptr.h  String.h  ThreadPool.h  Unique.h  Vector.h  Weak.h  Zero.h  config.h  panic.h
gepEngine/src/scripts/: CameraScript.cpp  CameraScript.h  EnemyScript.cpp  EnemyScript.h  FloorScript.cpp  FloorScript.h  PlayerScript.cpp  PlayerScript.h  Scripts.h
